Receiving new job fix, resigning from doing job fix

--- a/src/views/driverDashboard.ejs
+++ b/src/views/driverDashboard.ejs
@@ -51,7 +51,7 @@
         <% } %>
         </div>
     </div>
-
+        <div class="assigned-jobs-section">
         <h3>Przypisane prace</h3>
         <% if (assignedJobs && assignedJobs.length > 0) { %>
             <table class="jobs-table">
@@ -94,5 +94,6 @@
         <% } else { %>
             <p>Brak przypisanych prac</p>
         <% } %>
+    </div>
     </div>
 </div>
