--- a/src/views/clientDashboard.ejs
+++ b/src/views/clientDashboard.ejs
@@ -73,7 +73,7 @@
                 </thead>
                 <tbody>
                     <% jobs.forEach(job => { %>
-                        <tr>
+                        <tr data-job-id="<%= job._id %>">
                             <td><%= job.price %> PLN</td>
                             <td><%= job.weight %> kg</td>
                             <td><%= job.dimensions.length %>x<%= job.dimensions.width %>x<%= job.dimensions.height %> cm</td>
