--- a/src/views/layouts/dashboardLayout.ejs
+++ b/src/views/layouts/dashboardLayout.ejs
@@ -14,12 +14,12 @@
     <script src="/js/main.js"></script>
     <script>
         window.userId = "<%= user.id %>";
-        window.userRole = "<%= user.role %>";
+        window.userRole = "<%= user.role %>"
         window.subscribedUrls = "<%= user.subscribedUrls %>"
     </script>
     <script src="/js/wsHandler.js"></script>
     <script src="/js/mqttHandler.js"></script>
-    <script src="/js/client.js"></script>
+    <script src="/js/client.js"></script>;
     <script src="/js/driver.js"></script>
     <script src="/js/spedytor.js"></script>
     
